ghost/ghost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
  namespace: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost
          ports:
            - containerPort: 2368
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-svc
  namespace: ghost
spec:
  type: ClusterIP
  ports:
    - port: 2368
      targetPort: 2368
      protocol: TCP
  selector:
    app: ghost
