ghost/ghost_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-db-deployment
  namespace: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-db
  template:
    metadata:
      labels:
        app: ghost-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: ghost-volume
      volumes:
        - name: ghost-volume
          persistentVolumeClaim:
            claimName: ghost-volume
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-db-svc
  namespace: ghost
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: ghost-db
